--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="utf-8">
-    <title>Regna Bootstrap Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="诗歌 大数据" name="keywords">
+    <meta content="诗歌数据分析网站" name="description">
+    <title>格来格来 诗歌数据</title>
 
     <!-- Favicons -->
     <link href="static/img/favicon.png" rel="icon">
@@ -25,75 +25,45 @@
 
     <!-- Main Stylesheet File -->
     <link href="static/css/style.css" rel="stylesheet">
-
-    <!-- =======================================================
-    Theme Name: Regna
-    Theme URL: https://bootstrapmade.com/regna-bootstrap-onepage-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
 
-    <!--==========================
-  Header
-  ============================-->
+    <!--==========================  Header  ============================-->
     <header id="header">
         <div class="container">
 
             <div id="logo" class="pull-left">
-                <a href="#hero"><img src="static/img/logo.png" alt="" title="" /></img></a>
+                <!-- <a href="#hero"><img src="static/img/logo.png" alt="" title="" /></img></a> -->
                 <!-- Uncomment below if you prefer to use a text logo -->
-                <!--<h1><a href="#hero">Regna</a></h1>-->
+                <h1><a href="#hero">GELAI GELAI</a></h1>
             </div>
 
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="#hero">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li class="menu-has-children"><a href="">Drop Down</a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                            <li><a href="#">Drop Down 5</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li class="menu-active"><a href="#hero">主页</a></li>
+                    <li><a href="#about">简介</a></li>
+                    <li><a href="#services">数据分析</a></li>
+                    <li><a href="#portfolio">数据展示</a></li>
+                    <li><a href="#team">团队介绍</a></li>
+                    <li><a href="#contact">关于</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
     </header><!-- #header -->
 
-    <!--==========================
-    Hero Section
-  ============================-->
+    <!--==========================  Hero Section  ============================-->
     <section id="hero">
         <div class="hero-container">
-            <h1>Welcome to Regna</h1>
-            <h2>We are team of talanted designers making websites with Bootstrap</h2>
-            <a href="#about" class="btn-get-started">Get Started</a>
+            <h1>格来格来 诗歌大数据</h1>
+            <h2>基于诗歌的数据分析与成果展示</h2>
+            <a href="#about" class="btn-get-started">开始探索</a>
         </div>
     </section><!-- #hero -->
 
     <main id="main">
 
-        <!--==========================
-      About Us Section
-    ============================-->
+        <!--==========================   About Us Section    ============================-->
         <section id="about">
             <div class="container">
                 <div class="row about-container">
@@ -135,9 +105,7 @@
             </div>
         </section><!-- #about -->
 
-        <!--==========================
-      Facts Section
-    ============================-->
+        <!--==========================  Facts Section  ============================-->
         <section id="facts">
             <div class="container wow fadeIn">
                 <div class="section-header">
@@ -172,9 +140,7 @@
             </div>
         </section><!-- #facts -->
 
-        <!--==========================
-      Services Section
-    ============================-->
+        <!--==========================  Services Section  ============================-->
         <section id="services">
             <div class="container wow fadeIn">
                 <div class="section-header">
@@ -237,9 +203,7 @@
             </div>
         </section><!-- #services -->
 
-        <!--==========================
-    Call To Action Section
-    ============================-->
+        <!--==========================  Call To Action Section  ============================-->
         <section id="call-to-action">
             <div class="container wow fadeIn">
                 <div class="row">
@@ -257,9 +221,7 @@
             </div>
         </section><!-- #call-to-action -->
 
-        <!--==========================
-      Portfolio Section
-    ============================-->
+        <!--==========================  Portfolio Section  ============================-->
         <section id="portfolio">
             <div class="container wow fadeInUp">
                 <div class="section-header">
@@ -406,23 +368,21 @@
             </div>
         </section><!-- #portfolio -->
 
-        <!--==========================
-      Team Section
-    ============================-->
+        <!--==========================   Team Section   ============================-->
         <section id="team">
             <div class="container wow fadeInUp">
                 <div class="section-header">
-                    <h3 class="section-title">Team</h3>
+                    <h3 class="section-title">团队介绍</h3>
                     <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                         accusantium doloremque</p>
                 </div>
                 <div class="row">
-                    
+
                     <div class="col-lg-1"></div>
                     <div class="col-lg-2 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="static/img/team-1.jpg" alt=""></div>
-                            <h4>Walter White</h4>
+                            <h4>张云</h4>
                             <span>Chief Executive Officer</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -436,7 +396,7 @@
                     <div class="col-lg-2 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="static/img/team-2.jpg" alt=""></div>
-                            <h4>Sarah Jhinson</h4>
+                            <h4>刘子荷</h4>
                             <span>Product Manager</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -450,7 +410,7 @@
                     <div class="col-lg-2 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="static/img/team-2.jpg" alt=""></div>
-                            <h4>Sarah Jhinson</h4>
+                            <h4>展世蒙</h4>
                             <span>Product Manager</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -464,7 +424,7 @@
                     <div class="col-lg-2 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="static/img/team-3.jpg" alt=""></div>
-                            <h4>William Anderson</h4>
+                            <h4>吴铭钞</h4>
                             <span>CTO</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -478,7 +438,7 @@
                     <div class="col-lg-2 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="static/img/team-4.jpg" alt=""></div>
-                            <h4>Amanda Jepson</h4>
+                            <h4>郭艺凯</h4>
                             <span>Accountant</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -495,9 +455,7 @@
             </div>
         </section><!-- #team -->
 
-        <!--==========================
-      Contact Section
-    ============================-->
+        <!--==========================  Contact Section  ============================-->
         <section id="contact">
             <div class="container wow fadeInUp">
                 <div class="section-header">
@@ -579,9 +537,7 @@
 
     </main>
 
-    <!--==========================
-    Footer
-  ============================-->
+    <!--==========================  Footer  ============================-->
     <footer id="footer">
         <div class="footer-top">
             <div class="container">
