MOD: change the homepage template and adjust for this project

--- a/frontend/sd_dynasty.html
+++ b/frontend/sd_dynasty.html
@@ -132,12 +132,11 @@
                 <!-- Sidebar navigation-->
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="p-t-30">
-                        <!-- use selected to select item -->
                         <li id="si1" class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="sd_dynasty.html?dynasty=1"
                                 aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">秦朝</span></a></li>
                         <li id="si2" class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="sd_dynasty.html?dynasty=2"
                                 aria-expanded="false"><i class="mdi mdi-chart-bar"></i><span class="hide-menu">汉朝</span></a></li>
-                        <li id="si3" class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="sd_dynasty.html?dynasty=3"
+                        <li id="si3" class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="sd_dynasty.html?dynasty=3" 
                                 aria-expanded="false"><i class="mdi mdi-chart-bubble"></i><span class="hide-menu">魏晋</span></a></li>
                         <li id="si4" class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="sd_dynasty.html?dynasty=4"
                                 aria-expanded="false"><i class="mdi mdi-border-inside"></i><span class="hide-menu">南北</span></a></li>
@@ -190,152 +189,11 @@
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
-                <div class="row el-element-overlay">
-                    <div class="col-lg-3 col-md-6" id="c1">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img1.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">秦朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c2">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img2.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">汉朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c3">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img4.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">魏晋</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c4">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img3.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">南北朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c5">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img4.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">隋朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c6">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img3.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">唐代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c7">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img5.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">宋代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c8">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img6.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">辽代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c9">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img1.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">金代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c10">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img1.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">元代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c11">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img2.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">明代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6" id="c12">
-                        <div class="card card-hover">
-                            <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img3.jpg"
-                                        alt="user" />
-                                </div>
-                                <div class="el-card-content">
-                                    <h4 class="m-b-0">清代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                <div class="card-columns" id="content_inside">
+
                 </div>
+
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
@@ -377,44 +235,10 @@
     <!--Custom JavaScript -->
     <script src="/static/dist/js/custom.min.js"></script>
     <!--This page JavaScript -->
-    <script>
-        $("#c1").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=1"
-        });
-        $("#c2").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=2"
-        });
-        $("#c3").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=3"
-        });
-        $("#c4").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=4"
-        });
-        $("#c5").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=5"
-        });
-        $("#c6").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=6"
-        });
-        $("#c7").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=7"
-        });
-        $("#c8").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=8"
-        });
-        $("#c9").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=9"
-        });
-        $("#c10").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=10"
-        });
-        $("#c11").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=11"
-        });
-        $("#c12").click(()=>{
-            window.location.href = "sd_dynasty.html?dynasty=12"
-        });
-    </script>
+    <script src="/static/js/sd_dynasty.js"></script>
+
+    <link href="/static/css/main_loader.css" rel="stylesheet">
+
 </body>
 
 </html>
