--- a/frontend/home.html
+++ b/frontend/home.html
@@ -83,7 +83,7 @@
 							<div class="image"><img src="static/homepage/images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>原始数据展示</h2>
                                 <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-                                <a href="#" class="button">EXPLORE</a>
+                                <a href="sd_index.html" class="button">EXPLORE</a>
 							</div>
 						</section>
 						<section class="spotlight" id="s2">
