ADD: map-route-visaul html migrate

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -97,7 +97,7 @@
 							<div class="image"><img src="static/homepage/images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>人物时空关系可视化</h2>
                                 <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-                                <a href="#" class="button">EXPLORE</a>
+                                <a href="route_map.html" class="button">EXPLORE</a>
 							</div>
                         </section>
                         <section class="spotlight" id="s4">
@@ -154,8 +154,8 @@
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary"><span class="icon fa-paper-plane"></span> 联系我们</a></li>
-								<li><a href="#" class="button fit"><span class="icon fa-code-fork"></span> FORK 这个项目</a></li>
+								<li><a href="#" class="button fit primary"><span class="icon fa-envelope"></span> 联系我们</a></li>
+								<li><a href="#" class="button fit"><span class="icon fa-github"></span> STAR/FORK</a></li>
 							</ul>
 						</div>
 					</section>
@@ -163,11 +163,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-qq"><span class="label">QQ</span></a></li>
-							<li><a href="#" class="icon fa-wechat"><span class="label">Wechat</span></a></li>
+                            <li><a href="#" class="icon fa-wechat"><span class="label">Wechat</span></a></li>
 							<li><a href="#" class="icon fa-weibo"><span class="label">Weibo</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#" class="icon fa-edge"><span class="label">Edge</span></a></li>
+							<li><a href="#" class="icon fa-chrome"><span class="label">Chrome</span></a></li>
+							<li><a href="#" class="icon fa-firefox"><span class="label">FireFox</span></a></li>
 						</ul>
 						<ul class="copyright">
                             <li>&copy;2018 BUPT-SCS Data of Science and Service Center. All Rights Reserved.</li>
