--- a/frontend/sd_index.html
+++ b/frontend/sd_index.html
@@ -101,22 +101,6 @@
                             </form>
                         </li>
                     </ul>
-                    <!-- ============================================================== -->
-                    <!-- Right side toggle and nav items -->
-                    <!-- ============================================================== -->
-                    <ul class="navbar-nav float-right">
-                        <!-- ============================================================== -->
-                        <!-- Comment -->
-                        <!-- ============================================================== -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" 
-                                href="omt_index.html"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <b class="badge badge-pill badge-info font-18">One More Thing</b>
-                            </a>
-                        </li>
-                        <!-- ============================================================== -->
-                    </ul>
                 </div>
             </nav>
         </header>
@@ -133,6 +117,8 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="p-t-30">
                         <!-- use selected to select item -->
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="home.html"
+                                aria-expanded="false"><i class="mdi mdi-home"></i><span class="hide-menu">返回首页</span></a></li>
                         <li id="si1" class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="sd_dynasty.html?dynasty=1"
                                 aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">秦朝</span></a></li>
                         <li id="si2" class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="sd_dynasty.html?dynasty=2"
